--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  exes:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,8 +20,8 @@ jobs:
       - name: Set up Zig
         uses: mlugg/setup-zig@v1
 
-      - name: Run `exes`
-        run: zig build exes
+      - name: Run `build`
+        run: zig build
 
   fmt:
     runs-on: ubuntu-latest
