--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
         uses: mlugg/setup-zig@v1
 
       - name: Run `build`
-        run: zig build
+        run: zig build -Doptimize=ReleaseFast
 
   fmt:
     runs-on: ubuntu-latest
