feat: enable LTO mode by default, even for macOS

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,4 +26,4 @@ jobs:
         uses: mlugg/setup-zig@v1
 
       - name: Run `build`
-        run: zig build -Doptimize=ReleaseFast
+        run: zig build
