fix(ci): LLVM action doesn't have a general dynamic library, so don't run it on `llvm_exes`

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,5 +27,6 @@ jobs:
 
       - name: Run `build`
         run: |
-          llvm-config --libs
-          zig build
+          zig build util_libs
+          zig build exes
+          zig build fmt
