--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,15 +18,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v2
-        with:
-          version: "17"
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y lld llvm llvm-dev clang
 
       - name: Set up Zig
         uses: mlugg/setup-zig@v1
 
       - name: Run `build`
-        run: |
-          zig build util_libs
-          zig build exes
-          zig build fmt
+        run: zig build
